--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./icons/favicon.ico" type="image/x-icon">
+    <title>Marvel library</title>
   </head>
   <body>
     <div id="root"></div>
